--- a/platformio.ini
+++ b/platformio.ini
@@ -18,4 +18,6 @@ lib_deps =
     adafruit/Adafruit SSD1306
     adafruit/Adafruit GFX Library
     adafruit/Adafruit BusIO
+    olikraus/U8g2 @ ^2.34.22
     nrf24/RF24
+    Wire
